# NSYSU-AOS-Page-Replacement-Algorithms

./: CMakeLists.txt  README.md  main.cpp
data/: draw_plot.ipynb  draw_plot.py
pageReplacement/: pageReplacement.cpp  pageReplacement.hpp
performanceReport/: performanceReport.cpp  performanceReport.hpp
referenceString/: referenceString.cpp  referenceString.hpp
